applications/kubernetes/media/jellyseerr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyseerr
  namespace: media 
spec:
  ports:
  - name: web
    port: 5055
  selector:
    app: jellyseerr
