applications/kubernetes/media/jellyseerr/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr-ingressroute
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-public
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`jellyseerr.eggenberg.io`)
    kind: Rule
    services:
    - name: jellyseerr
      port: 5055
  tls:
    secretName: jellyseerr-certificate-secret
